Resolved the z-index conflict between flappy canvas and the header/navigation by adding the class open to the header and increasing his z-index when owning it

--- a/src/styles/3.Components/_header.scss
+++ b/src/styles/3.Components/_header.scss
@@ -19,6 +19,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    &.opened {
+        z-index: 30000;
+    }
     span {
         font-size: 1.5em;
         font-family: "main-fonts";
