--- a/src/styles/3.Components/_navigation.scss
+++ b/src/styles/3.Components/_navigation.scss
@@ -18,7 +18,7 @@ nav {
     height: 100vh;
     transition: 0.25s ease-in-out;
     transform: translateY(-100%);
-    z-index: 2;
+    z-index: 20000;
     display: flex;
     justify-content: center;
     align-items: center;
